// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render install page 1`] = `
.c0 {
  padding: 0;
  width: 840px;
  margin: 20px auto;
}

.c1 {
  display: inline-block;
  background: no-repeat center/contain url('img/logo.png');
  width: 123px;
  height: 60px;
  filter: none;
}

.c2 {
  margin-bottom: 2rem;
}

.c3 {
  font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 1.25rem;
}

.c4 {
  margin-left: 0.5rem;
}

.c7 {
  font-size: .875rem;
  margin-bottom: 1rem;
}

.c7 li {
  margin-bottom: 0.5rem;
}

.c7 code {
  font-size: .75rem;
  font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  background-color: #f5f2f0;
}

.c11 {
  display: flex;
  flex-flow: column wrap;
}

.c14 {
  display: flex;
  flex-grow: 1;
}

.c18 {
  display: flex;
  flex-grow: 0;
}

.c12 {
  display: flex;
  flex-flow: row wrap;
}

.c12 .c13+.c13 {
  margin-left: 1rem;
}

.c24 {
  margin: 0 0.5rem;
  width: 0.25rem;
  height: 100%;
  background: linear-gradient(     180deg,     transparent 20%,     #DDD 20%,     #DDD 80%,     transparent 80%   );
}

.c26 {
  text-align: center;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 380px;
  height: 32px;
  padding: 0.25rem 0.5rem;
  color: #000000;
  background-color: #f5f5f5;
  cursor: pointer;
}

.c8:focus,
.c8:hover {
  filter: brightness(110%);
}

.c9 {
  width: 32px;
}

.c10 {
  font-size: 1rem;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  user-select: none;
}

.c23 {
  padding: 0.5rem;
  background-color: transparent;
  border: solid 1px;
  border-radius: 0.25rem;
  cursor: pointer;
}

.c23:hover:not(:disabled),
.c23:focus:not(:disabled) {
  color: #007BFF;
  border-color: #007BFF;
  outline-color: #007BFF;
}

.c25 {
  margin-right: 0.25rem;
}

.c15 {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-bottom: 0.5rem;
  border-radius: 0.25rem;
}

.c16 {
  font-size: 1.125rem;
  margin: 0.5rem 0;
  display: flex;
}

.c21 {
  margin-left: 0.5rem;
  font-size: .875rem;
  align-self: flex-end;
  color: #666;
}

.c17 {
  padding: 0.25rem;
  font-size: 1.125rem;
  width: 100%;
  border: 1px solid;
  border-color: inherit;
}

.c22 {
  color: #F44336;
  margin-left: 0.25rem;
}

.c19 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c20 {
  position: relative;
  margin-left: -1.5rem;
  font-size: 1.125rem;
  cursor: pointer;
}

.c5 {
  margin-left: 2.25rem;
  margin-bottom: 2.25rem;
}

.c6 {
  border: 1px solid #4338CA;
  color: #4338CA;
  margin-bottom: 1rem;
}

<body>
  <div>
    <div
      class="c0"
    >
      <header>
        <a
          data-discover="true"
          href="/"
        >
          <div
            class="c1"
          />
        </a>
      </header>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Install Function
        </h2>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <ul
                class="c7"
              >
                <li>
                  Sharing this URL makes others can use this function.
                </li>
                <li>
                  You can edit the code and every fields before installation.
                </li>
              </ul>
            </div>
            <div
              class="c8"
              tabindex="-1"
            >
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                Markdown: [title](url)
              </div>
            </div>
            <form>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c13 c14"
                  >
                    <div
                      class="c15"
                    >
                      <label
                        class="c16"
                        for="name"
                      >
                        Name
                      </label>
                      <input
                        class="c17"
                        id="name"
                        name="name"
                        placeholder=""
                        type="text"
                        value="Markdown: [title](url)"
                      />
                    </div>
                  </div>
                  <div
                    class="c13 c18"
                    style="width: 9rem;"
                  >
                    <div
                      class="c15"
                    >
                      <label
                        class="c16"
                        for="color"
                      >
                        Color
                      </label>
                      <div
                        class="c19"
                      >
                        <input
                          class="c17"
                          id="color"
                          maxlength="7"
                          name="color"
                          pattern="#([0-9A-Fa-f]{3}|[0-9A-Fa-f]{6})"
                          placeholder="#F0F0F0"
                          type="text"
                          value="#f5f5f5"
                        />
                        <div
                          class="c20"
                        >
                          <svg
                            aria-hidden="true"
                            class="svg-inline--fa fa-palette"
                            data-icon="palette"
                            data-prefix="fas"
                            data-testid="toggle-palette"
                            role="img"
                            viewBox="0 0 512 512"
                          >
                            <path
                              d="M512 256c0 .9 0 1.8 0 2.7-.4 36.5-33.6 61.3-70.1 61.3L344 320c-26.5 0-48 21.5-48 48 0 3.4 .4 6.7 1 9.9 2.1 10.2 6.5 20 10.8 29.9 6.1 13.8 12.1 27.5 12.1 42 0 31.8-21.6 60.7-53.4 62-3.5 .1-7 .2-10.6 .2-141.4 0-256-114.6-256-256S114.6 0 256 0 512 114.6 512 256zM128 288a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zm0-96a32 32 0 1 0 0-64 32 32 0 1 0 0 64zM288 96a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zm96 96a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"
                              fill="currentColor"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c12"
                >
                  <div
                    class="c15"
                  >
                    <label
                      class="c16"
                      for="pattern"
                    >
                      URL Pattern
                      <span
                        class="c21"
                      >
                        <span>
                          (optional) This function will be displayed if the URL matches.
                        </span>
                      </span>
                    </label>
                    <input
                      class="c17"
                      id="pattern"
                      name="pattern"
                      placeholder=".*"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="c12"
                >
                  <div
                    class="c15"
                  >
                    <label
                      class="c16"
                      for="code"
                    >
                      Code
                      <span
                        class="c21"
                      >
                        Must be a single function.
                      </span>
                    </label>
                    <div
                      style="position: relative; text-align: left; box-sizing: border-box; padding: 0px; overflow: hidden; font-size: 1rem; font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; background-color: rgb(245, 242, 240);"
                    >
                      <pre
                        aria-hidden="true"
                        class="editor-additional-styles"
                        style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-size: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; position: relative; pointer-events: none; padding: 0.5rem 0.5rem 0.5rem 0.5rem;"
                      >
                        <span
                          class="token comment"
                        >
                          /**
 * Copy link as Markdown.
 */
                        </span>
                        

                        <span
                          class="token punctuation"
                        >
                          (
                        </span>
                        <span
                          class="token parameter"
                        >
                          <span
                            class="token punctuation"
                          >
                            {
                          </span>
                          title
                          <span
                            class="token punctuation"
                          >
                            ,
                          </span>
                           url
                          <span
                            class="token punctuation"
                          >
                            }
                          </span>
                        </span>
                        <span
                          class="token punctuation"
                        >
                          )
                        </span>
                         
                        <span
                          class="token operator"
                        >
                          =&gt;
                        </span>
                         
                        <span
                          class="token punctuation"
                        >
                          {
                        </span>
                        
  
                        <span
                          class="token keyword"
                        >
                          const
                        </span>
                         escaped 
                        <span
                          class="token operator"
                        >
                          =
                        </span>
                         title
                        <span
                          class="token punctuation"
                        >
                          .
                        </span>
                        <span
                          class="token function"
                        >
                          replace
                        </span>
                        <span
                          class="token punctuation"
                        >
                          (
                        </span>
                        <span
                          class="token regex"
                        >
                          <span
                            class="token regex-delimiter"
                          >
                            /
                          </span>
                          <span
                            class="token regex-source language-regex"
                          >
                            [\\[\\]]
                          </span>
                          <span
                            class="token regex-delimiter"
                          >
                            /
                          </span>
                          <span
                            class="token regex-flags"
                          >
                            g
                          </span>
                        </span>
                        <span
                          class="token punctuation"
                        >
                          ,
                        </span>
                         
                        <span
                          class="token string"
                        >
                          '\\\\$&'
                        </span>
                        <span
                          class="token punctuation"
                        >
                          )
                        </span>
                        <span
                          class="token punctuation"
                        >
                          ;
                        </span>
                        
  
                        <span
                          class="token keyword"
                        >
                          return
                        </span>
                         
                        <span
                          class="token template-string"
                        >
                          <span
                            class="token template-punctuation string"
                          >
                            \`
                          </span>
                          <span
                            class="token string"
                          >
                            [
                          </span>
                          <span
                            class="token interpolation"
                          >
                            <span
                              class="token interpolation-punctuation punctuation"
                            >
                              \${
                            </span>
                            escaped
                            <span
                              class="token interpolation-punctuation punctuation"
                            >
                              }
                            </span>
                          </span>
                          <span
                            class="token string"
                          >
                            ](
                          </span>
                          <span
                            class="token interpolation"
                          >
                            <span
                              class="token interpolation-punctuation punctuation"
                            >
                              \${
                            </span>
                            url
                            <span
                              class="token interpolation-punctuation punctuation"
                            >
                              }
                            </span>
                          </span>
                          <span
                            class="token string"
                          >
                            )
                          </span>
                          <span
                            class="token template-punctuation string"
                          >
                            \`
                          </span>
                        </span>
                        <span
                          class="token punctuation"
                        >
                          ;
                        </span>
                        

                        <span
                          class="token punctuation"
                        >
                          }
                        </span>
                        <span
                          class="token punctuation"
                        >
                          ;
                        </span>
                        <br />
                      </pre>
                      <textarea
                        autocapitalize="off"
                        autocomplete="off"
                        autocorrect="off"
                        class="npm__react-simple-code-editor__textarea editor-additional-styles"
                        data-gramm="false"
                        id="code"
                        spellcheck="false"
                        style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-size: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; resize: none; color: inherit; overflow: hidden; -webkit-font-smoothing: antialiased; -webkit-text-fill-color: transparent; padding: 0.5rem 0.5rem 0.5rem 0.5rem;"
                      >
                        /**
 * Copy link as Markdown.
 */
({title, url}) =&gt; {
  const escaped = title.replace(/[\\[\\]]/g, '\\\\$&');
  return \`[\${escaped}](\${url})\`;
};
                      </textarea>
                      <style>
                        
/**
 * Reset the text fill color so that placeholder is visible
 */
.npm__react-simple-code-editor__textarea:empty {
  -webkit-text-fill-color: inherit !important;
}

/**
 * Hack to apply on some CSS on IE10 and IE11
 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  /**
    * IE doesn't support '-webkit-text-fill-color'
    * So we use 'color: transparent' to make the text transparent on IE
    * Unlike other browsers, it doesn't affect caret color in IE
    */
  .npm__react-simple-code-editor__textarea {
    color: transparent !important;
  }

  .npm__react-simple-code-editor__textarea::selection {
    background-color: #accef7 !important;
    color: transparent !important;
  }
}

                      </style>
                    </div>
                    <span
                      class="c22"
                    />
                  </div>
                </div>
                <div
                  class="c12"
                >
                  <div
                    class="c13 c18"
                  >
                    <button
                      class="c23"
                      type="button"
                    >
                      Install
                    </button>
                  </div>
                  <div
                    class="c13 c18"
                  >
                    <div
                      class="c24"
                    />
                  </div>
                  <div
                    class="c13 c18"
                  >
                    <button
                      class="c23"
                      type="button"
                    >
                      <i
                        class="c25"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-share-from-square"
                          data-icon="share-from-square"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 576 512"
                        >
                          <path
                            d="M384.5 24l0 72-64 0c-79.5 0-144 64.5-144 144 0 93.4 82.8 134.8 100.6 142.6 2.2 1 4.6 1.4 7.1 1.4l2.5 0c9.8 0 17.8-8 17.8-17.8 0-8.3-5.9-15.5-12.8-20.3-8.9-6.2-19.2-18.2-19.2-40.5 0-45 36.5-81.5 81.5-81.5l30.5 0 0 72c0 9.7 5.8 18.5 14.8 22.2s19.3 1.7 26.2-5.2l136-136c9.4-9.4 9.4-24.6 0-33.9L425.5 7c-6.9-6.9-17.2-8.9-26.2-5.2S384.5 14.3 384.5 24zm-272 72c-44.2 0-80 35.8-80 80l0 256c0 44.2 35.8 80 80 80l256 0c44.2 0 80-35.8 80-80l0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32c0 8.8-7.2 16-16 16l-256 0c-8.8 0-16-7.2-16-16l0-256c0-8.8 7.2-16 16-16l16 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-16 0z"
                            fill="currentColor"
                          />
                        </svg>
                      </i>
                      Update URL
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Hints
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c7"
          >
            <li>
              The code must be a single function that returns a string value to copy.
            </li>
            <li>
              <b>
                *BETA*
              </b>
               Returning
               
              <code>
                {
                "html":"...","text": "..."
                }
              </code>
               
              to copy as rich text & plain text. This interface may change in future.
            </li>
            <li>
              <code>
                render(template, view)
              </code>
               - You can render
               
              <a
                href="https://github.com/janl/mustache.js"
                rel="noreferrer noopener"
                target="_blank"
              >
                mustache
              </a>
               
              templates.
            </li>
            <li>
              <code>
                new DOMParser().parseFromString(content, 'text/html')
              </code>
              - You can use
               
              <a
                href="https://developer.mozilla.org/docs/Web/API/DOMParser"
                rel="noreferrer noopener"
                target="_blank"
              >
                <code>
                  DOMParser
                </code>
              </a>
               
              to query the page document.
            </li>
            <li>
              To feedback an error, use 
              <code>
                throw new Error(...)
              </code>
              . It will appear at the function that produced the error.
            </li>
            <li>
              The code runs safely under the
               
              <a
                href="https://developer.chrome.com/apps/sandboxingEval"
                rel="noreferrer noopener"
                target="_blank"
              >
                sandbox
              </a>
              , not under the page.
            </li>
            <li>
              Visit
               
              <a
                href="https://github.com/pokutuna/chrome-cocopy/blob/master/gallery/README.md"
                rel="noreferrer noopener"
                target="_blank"
              >
                Function Gallery
              </a>
               
              to find new function and see sample codes.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Links
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c7"
          >
            <li>
              <a
                href="https://chrome.google.com/webstore/detail/cocopy/ihnfodlbkhgjnbheemjhkjfkfglgbdgc"
                rel="noreferrer noopener"
                target="_blank"
              >
                Chrome Web Store
              </a>
            </li>
            <li>
              <a
                href="https://github.com/pokutuna/chrome-cocopy"
                rel="noreferrer noopener"
                target="_blank"
              >
                GitHub Repository
              </a>
            </li>
            <li>
              <a
                href="https://github.com/pokutuna/chrome-cocopy/blob/master/gallery/README.md"
                rel="noreferrer noopener"
                target="_blank"
              >
                Function Gallery
              </a>
            </li>
            <li>
              <a
                href="./licenses.txt"
                rel="noreferrer noopener"
                target="_blank"
              >
                Copyright Notice
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c26"
      >
        Build v0.0.0
      </div>
    </div>
  </div>
</body>
`;

exports[`render options 1`] = `
.c0 {
  padding: 0;
  width: 840px;
  margin: 20px auto;
}

.c1 {
  display: inline-block;
  background: no-repeat center/contain url('img/logo.png');
  width: 123px;
  height: 60px;
  filter: none;
}

.c2 {
  margin-bottom: 2rem;
}

.c3 {
  font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 1.25rem;
}

.c4 {
  margin-left: 0.5rem;
}

.c15 {
  font-size: .875rem;
  margin-bottom: 1rem;
}

.c15 li {
  margin-bottom: 0.5rem;
}

.c15 code {
  font-size: .75rem;
  font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  background-color: #f5f2f0;
}

.c16 {
  text-align: center;
}

.c13 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 380px;
  height: 32px;
  padding: 0.25rem 0.5rem;
  color: #010203;
  background-color: #FFF;
  cursor: pointer;
}

.c13:focus,
.c13:hover {
  filter: brightness(110%);
}

.c7 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 380px;
  height: 32px;
  padding: 0.25rem 0.5rem;
  color: #000000;
  background-color: #f5f5f5;
  cursor: pointer;
}

.c7:focus,
.c7:hover {
  filter: brightness(110%);
}

.c11 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 380px;
  height: 32px;
  padding: 0.25rem 0.5rem;
  color: #FFFFFF;
  background-color: #ff5722;
  cursor: pointer;
}

.c11:focus,
.c11:hover {
  filter: brightness(110%);
}

.c8 {
  width: 32px;
}

.c9 {
  font-size: 1rem;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  user-select: none;
}

.c14 {
  border: 1px solid #010203;
}

.c14:hover {
  color: #007BFF;
  border-color: #007BFF;
}

.c5 {
  opacity: 1;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 2.25rem;
  height: 32px;
  cursor: pointer;
}

.c10 {
  width: 2.25rem;
  opacity: 1;
  cursor: move;
}

.c12 {
  margin-top: 0.5rem;
}

<body>
  <div>
    <div
      class="c0"
    >
      <header>
        <a
          data-discover="true"
          href="/"
        >
          <div
            class="c1"
          />
        </a>
      </header>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Functions
        </h2>
        <div
          class="c4"
        >
          <div>
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-right fa-lg"
                  data-icon="caret-right"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M249.3 235.8c10.2 12.6 9.5 31.1-2.2 42.8l-128 128c-9.2 9.2-22.9 11.9-34.9 6.9S64.5 396.9 64.5 384l0-256c0-12.9 7.8-24.6 19.8-29.6s25.7-2.2 34.9 6.9l128 128 2.2 2.4z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="c7"
                tabindex="-1"
              >
                <div
                  class="c8"
                />
                <div
                  class="c9"
                >
                  Markdown: [title](url)
                </div>
              </div>
              <div
                draggable="true"
              >
                <div
                  class="c6 c10"
                  draggable="true"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars"
                    data-icon="bars"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-right fa-lg"
                  data-icon="caret-right"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M249.3 235.8c10.2 12.6 9.5 31.1-2.2 42.8l-128 128c-9.2 9.2-22.9 11.9-34.9 6.9S64.5 396.9 64.5 384l0-256c0-12.9 7.8-24.6 19.8-29.6s25.7-2.2 34.9 6.9l128 128 2.2 2.4z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="c11"
                tabindex="-1"
              >
                <div
                  class="c8"
                />
                <div
                  class="c9"
                >
                  HTML: &lt;a href={url}&gt;{title}&lt;/a&gt;
                </div>
              </div>
              <div
                draggable="true"
              >
                <div
                  class="c6 c10"
                  draggable="true"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars"
                    data-icon="bars"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-plus"
                  data-icon="plus"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="c13 c14"
              >
                <div
                  class="c8"
                />
                <div
                  class="c9"
                >
                  Create New Function
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Hints
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c15"
          >
            <li>
              The code must be a single function that returns a string value to copy.
            </li>
            <li>
              <b>
                *BETA*
              </b>
               Returning
               
              <code>
                {
                "html":"...","text": "..."
                }
              </code>
               
              to copy as rich text & plain text. This interface may change in future.
            </li>
            <li>
              <code>
                render(template, view)
              </code>
               - You can render
               
              <a
                href="https://github.com/janl/mustache.js"
                rel="noreferrer noopener"
                target="_blank"
              >
                mustache
              </a>
               
              templates.
            </li>
            <li>
              <code>
                new DOMParser().parseFromString(content, 'text/html')
              </code>
              - You can use
               
              <a
                href="https://developer.mozilla.org/docs/Web/API/DOMParser"
                rel="noreferrer noopener"
                target="_blank"
              >
                <code>
                  DOMParser
                </code>
              </a>
               
              to query the page document.
            </li>
            <li>
              To feedback an error, use 
              <code>
                throw new Error(...)
              </code>
              . It will appear at the function that produced the error.
            </li>
            <li>
              The code runs safely under the
               
              <a
                href="https://developer.chrome.com/apps/sandboxingEval"
                rel="noreferrer noopener"
                target="_blank"
              >
                sandbox
              </a>
              , not under the page.
            </li>
            <li>
              Visit
               
              <a
                href="https://github.com/pokutuna/chrome-cocopy/blob/master/gallery/README.md"
                rel="noreferrer noopener"
                target="_blank"
              >
                Function Gallery
              </a>
               
              to find new function and see sample codes.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Debugging
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c15"
          >
            <li>
              To open the developer console by right clicking on the popup & selecting "Inspect"
            </li>
            <li>
              You can find the code on the "Sources" panel, in
               
              <code>
                sandbox.html
              </code>
               &gt; 
              <code>
                (no domain)
              </code>
               after executing it.
            </li>
            <li>
              You also can use 
              <code>
                debugger;
              </code>
               in the code.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Links
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c15"
          >
            <li>
              <a
                href="https://chrome.google.com/webstore/detail/cocopy/ihnfodlbkhgjnbheemjhkjfkfglgbdgc"
                rel="noreferrer noopener"
                target="_blank"
              >
                Chrome Web Store
              </a>
            </li>
            <li>
              <a
                href="https://github.com/pokutuna/chrome-cocopy"
                rel="noreferrer noopener"
                target="_blank"
              >
                GitHub Repository
              </a>
            </li>
            <li>
              <a
                href="https://github.com/pokutuna/chrome-cocopy/blob/master/gallery/README.md"
                rel="noreferrer noopener"
                target="_blank"
              >
                Function Gallery
              </a>
            </li>
            <li>
              <a
                href="./licenses.txt"
                rel="noreferrer noopener"
                target="_blank"
              >
                Copyright Notice
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c16"
      >
        Build v0.0.0
      </div>
    </div>
  </div>
</body>
`;
